# causalrl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
archive/: README.md
benchmarks/ci_smoke/: README.md
benchmarks/full/: README.md
configs/: ope.yaml
configs/benchmark_suites/: default.yaml
configs/benchmarks/: all.yaml  behavior_policy.yaml  horizon.yaml  overlap.yaml  stochasticity.yaml
crl/: __init__.py  assumptions.py  assumptions_catalog.py  cli.py  ope.py
crl/adapters/: __init__.py  d4rl.py  rl_unplugged.py
crl/api/: __init__.py
crl/behavior/: __init__.py  diagnostics.py  fit.py
crl/benchmarks/: __init__.py  bandit_synth.py  confounded_bandit.py  harness.py  mdp_synth.py
crl/config/: __init__.py  io.py
crl/confounding/: __init__.py  proximal.py
crl/core/: __init__.py  datasets.py  diagnostics.py  policy.py  reports.py
crl/data/: __init__.py  bandit.py  base.py  datasets.py  fingerprint.py  trajectory.py  transition.py
crl/diagnostics/: __init__.py  calibration.py  ess.py  overlap.py  plots.py  registry.py  shift.py  slicing.py  weights.py
crl/estimands/: __init__.py  policy_value.py  proximal_policy_value.py  sensitivity_policy_value.py
crl/estimators/: __init__.py  base.py  bootstrap.py  crossfit.py  diagnostics.py  double_rl.py  dr.py  dr_core.py  drl.py  dual_dice.py  fqe.py  gen_dice.py  hc_bounds.py  high_confidence.py  importance_sampling.py  magic.py  mis.py  mrdr.py  stats.py  utils.py  wdr.py
crl/evaluation/: __init__.py  decision.py  result.py  spec.py  suite.py
crl/experiments/: __init__.py  runner.py
crl/policies/: __init__.py  base.py  behavior.py  discrete.py  tabular.py  torch_mlp.py
crl/reporting/: __init__.py  export.py  schema.py  warnings.py
crl/selectors/: __init__.py
crl/sensitivity/: __init__.py  bandit.py  bandits.py  models.py  namkoong2020.py
crl/utils/: __init__.py  cache.py  seeding.py  validation.py
crl/viz/: __init__.py  plots.py  style.py
docs/: changelog.md  citing.md  cleanup_manifest.json  contributing.md  index.md  project_status.md  references.md  repo_cleanup_and_research_recommendations.md
docs/assumptions/: behavior_policy_known.md  bounded_confounding.md  bounded_rewards.md  correct_model.md  markov.md  overlap.md  sequential_ignorability.md
docs/concepts/: assumptions_identification.md  core_concepts.md  dataset_format.md  diagnostics.md  estimands.md  limitations.md  sensitivity.md
docs/explanation/: assumptions.md  bias_variance.md  confounding.md  estimator_selection.md  proximal.md
docs/getting-started/: installation.md  quickstart_bandit.md  quickstart_mdp.md
docs/how-to/: behavior_propensities_missing.md  benchmarking_and_model_selection.md  custom_policy_wrapper.md  diagnostics_interpretation.md  export_and_reporting.md  generate_reports.md  integrate_logged_data.md  logged_bandit_from_dataframe.md  performance_tuning.md  release.md  run_benchmarks.md  run_ope_pipeline.md  sensitivity_bounds.md  trajectory_dataset_from_parquet.md
docs/methods/: fqe.md  is.md  weight_tail_diagnostics.md
docs/notebooks/: 00_introduction.ipynb  01_bandit_ope.ipynb  01_estimands_and_assumptions.ipynb  02_bandit_ope_walkthrough.ipynb  02_mdp_ope.ipynb  02_quickstart_mdp_ope.ipynb  03_diagnostics.ipynb  03_diagnostics_overlap_ess.ipynb  03_mdp_ope_walkthrough.ipynb  04_confidence_intervals_and_hcope.ipynb  04_sensitivity.ipynb  05_advanced_dr_family.ipynb  05_dataset_schema_and_validation.ipynb  06_missing_propensities_fqe_path.ipynb  06_sensitivity_unobserved_confounding.ipynb  07_real_dataset_d4rl.ipynb  (+4 more)
examples/: README.md
experiments/: make_figures.py  micro_benchmark.py  run_benchmarks.py
notebooks/: 00_introduction.ipynb  00_introduction.py  01_bandit_ope.ipynb  01_bandit_ope.py  01_estimands_and_assumptions.ipynb  01_estimands_and_assumptions.py  01_quickstart_bandit_ope.ipynb  01_quickstart_bandit_ope.py  02_bandit_ope_walkthrough.ipynb  02_bandit_ope_walkthrough.py  02_mdp_ope.ipynb  02_mdp_ope.py  02_quickstart_mdp_ope.py  03_diagnostics.ipynb  03_diagnostics.py  03_diagnostics_overlap_ess.ipynb  03_diagnostics_overlap_ess.py  03_mdp_ope_walkthrough.ipynb  03_mdp_ope_walkthrough.py  04_confidence_intervals_and_hcope.ipynb  04_confidence_intervals_and_hcope.py  04_confidence_intervals_safe_selection.ipynb  04_confidence_intervals_safe_selection.py  04_sensitivity.ipynb  04_sensitivity.py  05_advanced_dr_family.ipynb  05_advanced_dr_family.py  05_sensitivity_analysis_bandits.ipynb  05_sensitivity_analysis_bandits.py  06_long_horizon_mis_vs_is.ipynb  06_long_horizon_mis_vs_is.py  06_sensitivity_unobserved_confounding.ipynb  06_sensitivity_unobserved_confounding.py  07_proximal_ope_confounded_pomdp.ipynb  07_proximal_ope_confounded_pomdp.py  07_real_dataset_d4rl.ipynb  07_real_dataset_d4rl.py  08_estimator_selection_and_debugging.ipynb  08_estimator_selection_and_debugging.py  10_bandit_ope_end_to_end.ipynb  (+3 more)
scripts/: build_docs_figures.py  check_repo_hygiene.py  crl_plotting.py  validate_docs_vs_code.py
tests/: test_assumption_requirements.py  test_behavior.py  test_benchmarks_integration.py  test_bootstrap_ci.py  test_datasets.py  test_diagnostics.py  test_dr_discounting.py  test_drl_tiny_mdp.py  test_dual_dice_scaling_warning.py  test_estimators_dr.py  test_estimators_extended.py  test_estimators_fqe.py  test_estimators_is.py  test_evaluate_api_split.py  test_examples_e2e.py  test_gendice_tabular.py  test_golden_workflows.py  test_hcope_bounds.py  test_is_clipping.py  test_mdp_tiny_groundtruth.py  test_ope_pipeline.py  test_property_estimators.py  test_proximal.py  test_report_exports.py  test_report_html_escaping.py  test_report_uncertainty_schema.py  test_seeding.py  test_selectors.py  test_sensitivity.py  test_shift_diagnostics.py  test_wdr_weights.py
(+82 files in other folders)
