[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalrl"
version = "0.1.0"
description = "Causal Reinforcement Learning (CRL) toolbox"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Gabriel Saco", email = "gsacow@gmail.com"}
]
dependencies = [
  "numpy>=1.23",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.6",
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocs-jupyter>=0.24",
  "mkdocstrings[python]>=0.24",
  "jupytext>=1.16",
  "matplotlib>=3.7",
  "build>=1.2",
  "twine>=5.0",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocs-jupyter>=0.24",
  "mkdocstrings[python]>=0.24",
  "jupytext>=1.16",
  "matplotlib>=3.7",
]
benchmarks = [
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/gsaco/causalrl"
Documentation = "https://gsaco.github.io/causalrl/"
Repository = "https://github.com/gsaco/causalrl"
Issues = "https://github.com/gsaco/causalrl/issues"
Changelog = "https://github.com/gsaco/causalrl/blob/v1/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["crl*"]

[tool.setuptools.package-data]
crl = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
