[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalrl"
version = "0.1.0"
description = "Causal Reinforcement Learning (CRL) toolbox"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Gabriel Saco", email = "gsacow@gmail.com"}
]
keywords = ["causal-inference", "reinforcement-learning", "off-policy-evaluation", "ope", "causal-rl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "torch>=2.0",
]

[project.optional-dependencies]
plots = [
  "matplotlib>=3.7",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "hypothesis>=6.95",
  "ruff>=0.4",
  "mypy>=1.6",
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocs-jupyter>=0.24",
  "mkdocstrings[python]>=0.24",
  "jupytext>=1.16",
  "matplotlib>=3.7",
  "build>=1.2",
  "twine>=5.0",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocs-jupyter>=0.24",
  "mkdocstrings[python]>=0.24",
  "jupytext>=1.16",
  "matplotlib>=3.7",
  "scienceplots>=2.1",
]
benchmarks = [
  "matplotlib>=3.7",
  "scienceplots>=2.1",
]
notebooks = [
  "jupytext>=1.16",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "ipykernel>=6.29",
  "jupyterlab>=4.0",
  "scienceplots>=2.1",
]
dice-torch = [
  "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/gsaco/causalrl"
Documentation = "https://gsaco.github.io/causalrl/"
Repository = "https://github.com/gsaco/causalrl"
Issues = "https://github.com/gsaco/causalrl/issues"
Changelog = "https://github.com/gsaco/causalrl/blob/v1/CHANGELOG.md"

[project.scripts]
crl = "crl.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["crl*"]

[tool.setuptools.package-data]
crl = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
