[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalrl"
description = "Causal Reinforcement Learning (CRL) toolbox"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Gabriel Saco", email = "gsacow@gmail.com"}
]
keywords = ["causal-inference", "reinforcement-learning", "off-policy-evaluation", "ope", "causal-rl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "torch>=2.0",
]

[project.optional-dependencies]
plots = [
  "matplotlib>=3.7",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "hypothesis>=6.95",
  "ruff>=0.4",
  "mypy>=1.6",
  "types-PyYAML>=6.0",
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocs-jupyter>=0.24",
  "mkdocstrings[python]>=0.24",
  "jupytext>=1.16",
  "matplotlib>=3.7",
  "build>=1.2",
  "twine>=5.0",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocs-jupyter>=0.24",
  "mkdocstrings[python]>=0.24",
  "jupytext>=1.16",
  "matplotlib>=3.7",
  "scienceplots>=2.1",
]
benchmarks = [
  "matplotlib>=3.7",
  "scienceplots>=2.1",
]
notebooks = [
  "jupytext>=1.16",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "ipykernel>=6.29",
  "jupyterlab>=4.0",
  "scienceplots>=2.1",
]
behavior = [
  "scikit-learn>=1.3",
]
d4rl = [
  "d4rl>=1.1",
  "gym>=0.26",
]
rlu = [
  "tensorflow>=2.11",
  "tensorflow-datasets>=4.9",
]
dice-torch = [
  "torch>=2.0",
]
all = [
  "matplotlib>=3.7",
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocs-jupyter>=0.24",
  "mkdocstrings[python]>=0.24",
  "jupytext>=1.16",
  "scienceplots>=2.1",
  "ipykernel>=6.29",
  "jupyterlab>=4.0",
  "scikit-learn>=1.3",
  "d4rl>=1.1",
  "gym>=0.26",
  "tensorflow>=2.11",
  "tensorflow-datasets>=4.9",
]

[project.urls]
Homepage = "https://github.com/gsaco/causalrl"
Documentation = "https://gsaco.github.io/causalrl/"
Repository = "https://github.com/gsaco/causalrl"
Issues = "https://github.com/gsaco/causalrl/issues"
Changelog = "https://github.com/gsaco/causalrl/blob/main/CHANGELOG.md"

[project.scripts]
crl = "crl.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "crl.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["crl*"]

[tool.setuptools.package-data]
crl = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["docs/notebooks/**/*.ipynb", "notebooks/**/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.py" = ["B018", "B905", "F401", "I001"]
"notebooks/**/*.ipynb" = ["B018", "B905", "F401", "I001"]
"docs/notebooks/**/*.ipynb" = ["B018", "B905", "F401", "I001"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
